[gd_scene load_steps=7 format=2]

[ext_resource path="res://PIXELFONT.tres" type="DynamicFont" id=1]
[ext_resource path="res://DigitalDisco.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="Theme" id=3]
default_font = ExtResource( 1 )
/styles/theme1 = SubResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 336.0
margin_bottom = 224.0
color = Color( 0.0901961, 0.117647, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -56.5
margin_top = 48.0
margin_right = 56.5
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 113.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0.113725, 0.376471, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "GAME NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.5
margin_top = -26.0
margin_right = 56.5
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 28.0
margin_right = 84.0
margin_bottom = 74.0

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 56.0
margin_bottom = 22.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "START"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 56.0
margin_bottom = 74.0

[node name="About" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 56.0
margin_bottom = 22.0
theme = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "ABOUT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 56.0
margin_bottom = 48.0

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 56.0
margin_bottom = 22.0
theme = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "QUIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
