extends Control



# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.



func _on_Start_pressed():
	pass # This would begin the game
	
	

func _on_About_pressed():
	pass # This would bring up an "about" page


func _on_Quit_pressed():
	get_tree().quit()
